--- a/app/server/views/admin/index.ejs
+++ b/app/server/views/admin/index.ejs
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Admin</h1>
+    <script src="/admin/js/scripts.min.js" type="text/javascript"></script>
   </body>
 </html>
