--- a/app/server/views/admin/login.ejs
+++ b/app/server/views/admin/login.ejs
@@ -5,31 +5,48 @@
     <link rel='stylesheet' href='/admin/css/style.css' />
   </head>
   <body>
-    <div class="container">
-    <h1>Login</h1>
-    <form role="form" action="/login" method="post" style="max-width: 300px;">
-      <div class="form-group">
-        <input type="text" name="username" placeholder="Enter Username" class="form-control"/>
-      </div>
-      <div class="form-group">
-        <input type="password" name="password" placeholder="Password" class="form-control"/>
-      </div>
-      <button type="submit" class="btn btn-default">Enviar</button>&nbsp;<a href="/">
-        <button type="button" class="btn btn-primary">Cancelar</button></a>
-      </form>
-    </div>
-    <div class="container">
-      <h1>Cadastro</h1>
-      <form role="form" action="/register" method="post" style="max-width: 300px;">
-        <div class="form-group">
-          <input type="text" name="username" placeholder="Enter Username" class="form-control"/>
+    <div class="mdl-grid">
+      <div class="mdl-cell mdl-cell--4-col">
+        <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
+          <h2 class="mdl-card__title-text">Login</h2>
         </div>
-        <div class="form-group">
-          <input type="password" name="password" placeholder="Password" class="form-control"/>
+        <form class="form" role="form" action="/admin/login" method="post">
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-cell--12-col">
+            <input class="mdl-textfield__input validate" type="text" name="username_login" id="username_login" />
+            <label class="mdl-textfield__label" for="username_login">Usuário</label>
+            <span class="mdl-textfield__error">Campo obrigatório</span>
+          </div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-cell--12-col">
+            <input class="mdl-textfield__input validate" type="password" name="password_login" id="password_login" />
+            <label class="mdl-textfield__label" for="password_login">Senha</label>
+            <span class="mdl-textfield__error">Campo obrigatório</span>
+          </div>
+        </form>
+        <div class="mdl-textfield--align-right">
+          <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Entrar</button>
         </div>
-        <button type="submit" class="btn btn-default">Enviar</button>&nbsp;<a href="/">
-          <button type="button" class="btn btn-primary">Cancelar</button></a>
-      </form>
+      </div>
+      <div class="mdl-cell mdl-cell--4-col">
+        <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
+          <h2 class="mdl-card__title-text">Cadastro</h2>
+        </div>
+        <form class="form" role="form" action="/admin/register" method="post">
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-cell--12-col">
+            <input class="mdl-textfield__input validate" type="text" name="username_register" id="username_register" />
+            <label class="mdl-textfield__label" for="username_register">Usuário</label>
+            <span class="mdl-textfield__error">Campo obrigatório</span>
+          </div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label mdl-cell--12-col">
+            <input class="mdl-textfield__input validate" type="password" name="password_register" id="password_register" />
+            <label class="mdl-textfield__label" for="password_register">Senha</label>
+            <span class="mdl-textfield__error">Campo obrigatório</span>
+          </div>
+        </form>
+        <div class="mdl-textfield--align-right">
+          <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Cadastrar</button>
+        </div>
+      </div>
     </div>
+    <script src="/admin/js/scripts.min.js" type="text/javascript"></script>
   </body>
 </html>
