--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Página inicial</h1>
+    <script src="/site/js/scripts.min.js" type="text/javascript"></script>
   </body>
 </html>
