--- a/source/assets/scss/admin/style.scss
+++ b/source/assets/scss/admin/style.scss
@@ -15,3 +15,6 @@
 
 @import "../../../vendor/prime-itcss/source/scss/09-trumps/_grid";
 @import "../../../vendor/prime-itcss/source/scss/09-trumps/_print";
+
+@import "../../../vendor/material-design-lite/src/material-design-lite-grid";
+@import "../../../vendor/material-design-lite/src/material-design-lite";
